<resources>
    <string name="app_name">Just Java</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate" > Chocolate</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="price">Price</string>
    <string name="order">order</string>
</resources>